Add cross platform dependencies into build.gradle